webui/css/main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
time, mark, audio, video { margin:0; padding:0; border:0; font-size:100%;
font:inherit; vertical-align:baseline }
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav,
section { display:block }
body { line-height:1 }
ol, ul { list-style:none }
blockquote, q { quotes:none }
blockquote:before, blockquote:after, q:before, q:after { content:'';
content:none }
table { border-collapse:collapse; border-spacing:0 }

/* End of CSS Reset and start of theQ styling */

html, body {
	margin:0;
	padding:0;
	font-family:Segoe UI, Arial, sans-serif;
	background-color:#444;
	color:#ccc;
	font-size:11px
}
h1 {
	display:inline;
	margin-left:5px;
	color:#bbb;
	font-size:xx-large;
	font-weight:bolder;
	text-decoration:none
}
.clearboth { clear:both }

/* Container Table - Inside jqueryUI Jobs tab */

#containerTable { width:100% }
#leftContainer {
	width:9%;
	vertical-align:top;
}
#gutter { width:1% }
#rightContainer { width:90%; vertical-align:top }


/* Filters bit on the left */
#filtersContainer {
	border-radius:5px;
	background:#333333 url(custom-theme/images/ui-bg_gloss-wave_25_333333_500x100.png) 0 0 repeat-x;
	padding-bottom:5px
}
#filtersContainer h2 {
	text-align:center;
	margin:0 0 5px 0;
	line-height:1.8em;
	font-size:11px;
	font-weight:bold;
	background:#bbb;
	color:black;
	border-top-left-radius:5px;
	border-top-right-radius:5px
}
#filters { margin:10px 10px }
#filters input { margin:7px 0 10px 0; padding:3px 4px }
#filters #stateboxes { margin:7px 0 10px 0; }
span.deleteicon {
	position: relative;
}
span.deleteicon span {
	position: absolute;
	display: block;
	top: -1px;
	right: 2px;
	width: 16px;
	height: 16px;
	background: url('custom-theme/images/ui-icons_cccccc_256x240.png') no-repeat -32px -192px;
	cursor: pointer;
}
span.deleteicon span:hover {
	background: url('custom-theme/images/ui-icons_a83300_256x240.png') no-repeat -32px -192px;
}
span.deleteicon input {
	padding-right: 16px;
}


/* Main table */
.mainTable {
	width:100%;
	border-collapse:collapse;
	text-align:right;
	line-height:1.8em;
	text-align:center;
	font-size:11px
}
.mainTable tr { height: 18px }
.mainTable th { border-right:1px solid #333 }
.mainTable td { border-right:1px solid #666 }
.mainTable th:last-of-type { border-right:0 }
.mainTable td:last-of-type { border-right:0 }
.mainTable thead tr { font-weight:bold; background:#bbb; color:black }
.mainTable tbody tr { background: #111; cursor:pointer }
.mainTable tbody tr.zebra { background: #222 }
.mainTable tbody tr.running { background: #141 }
.mainTable tbody tr.running.zebra { background: #353 }
.mainTable tbody tr.error { background: #611 }
.mainTable tbody tr.error.zebra { background: #833 }
.mainTable tbody tr.completed { background: #004 }
.mainTable tbody tr.completed.zebra { background: #006 }
.mainTable tbody tr.other { background: #404 }
.mainTable tbody tr.other.zebra { background: #606 }
.mainTable tbody tr:hover { background: #444 }
.mainTable tbody tr.zebra:hover { background: #444 }
.iconbtn { margin: 0 1px }
.iconbtn:hover { opacity:0.6 }
.mainTable img { vertical-align:bottom; border:0 }
/* Gotta have rounded corners :-) */
.mainTable tr:first-child th:first-child { border-top-left-radius:5px }
.mainTable tr:first-child th:last-child { border-top-right-radius:5px }
.mainTable tr:last-child td:first-child { border-bottom-left-radius:5px }
.mainTable tr:last-child td:last-child { border-bottom-right-radius:5px }

.mainTable .narrow1 { width:4% }
.mainTable .narrow2 { width:6% }
.mainTable .normalwidth { width:13% }

#jobsToolbar { margin:0 0 7px 0 }


/* Tab */
.ui-tabs .ui-tabs-panel { padding:15px 10px }


/* Header and footer */
#header { position:relative; left:1%; width:98%; padding:1em 0; }
#topToolbar { float:right; margin-right:0px; padding:3px 6px }
#lastupdate {
	position:fixed;
	bottom:7px;
	right:7px;
	color:#999;
	font-size:smaller
}


/* Dialog bits */
.popupdialog h3 { font-weight:bold; font-size:11px; margin:20px 0 15px 0 }
.popupdialog h3:first-of-type { margin-top:5px }
/* Log Dialog */
#leftlog { width:49%; min-height:100%; float:left; border-right:1px solid #333 }
#rightlog { width:49%; height:100%; float:right }
/* Help Dialog */
.colourbar { text-align:center; width:80%; margin-left:10% }
.greybg { background:#111; padding:5px }
.bluebg { background:#004; padding:5px }
.greenbg { background:#141; padding:5px }
.redbg  { background:#311; padding:5px }
.purplebg  { background:#313; padding:5px }

